Check in Jessica's change for "All Teams" link

--- a/sitedir/appuser/templates/appuser/index.html
+++ b/sitedir/appuser/templates/appuser/index.html
@@ -40,7 +40,7 @@
 
 	<div class="nav">
 		<h1 class="left">Popular Groups</h1>
-		<a class="right" href='#'>
+		<a class="right" href='{% url 'allteams' %}'>
 			All <span class="glyphicon glyphicon-menu-right" aria-hidden="true"></span>
 		</a>
 	</div>
