--- a/sitedir/appuser/templates/appuser/index.html
+++ b/sitedir/appuser/templates/appuser/index.html
@@ -1,9 +1,9 @@
 {% load staticfiles %}
 
 <link rel="stylesheet" type="text/css" href="{% static 'appuser/style.css' %}"/>
-<link rel="stylesheet" href="http://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/css/bootstrap.min.css">
+<link rel="stylesheet" href="//maxcdn.bootstrapcdn.com/bootstrap/3.3.6/css/bootstrap.min.css">
 <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.12.0/jquery.min.js"></script>
-<script src="http://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/js/bootstrap.min.js"></script>
+<script src="//maxcdn.bootstrapcdn.com/bootstrap/3.3.6/js/bootstrap.min.js"></script>
 
 <body>
 	<div class="header">
