--- a/sitedir/appuser/templates/appuser/allteams.html
+++ b/sitedir/appuser/templates/appuser/allteams.html
@@ -1,92 +1,67 @@
 {% load staticfiles %}
 <!DOCTYPE html>
-<html>
-<head>
-<meta charset="utf-8">
-<link rel="stylesheet" type="text/css" href="{% static 'appuser/style.css' %}"/>
-<link rel="stylesheet" href="//maxcdn.bootstrapcdn.com/bootstrap/3.3.6/css/bootstrap.min.css">
-<script src="https://ajax.googleapis.com/ajax/libs/jquery/1.12.0/jquery.min.js"></script>
-<script src="//maxcdn.bootstrapcdn.com/bootstrap/3.3.6/js/bootstrap.min.js"></script>
-</head>
-<body>
-	<div class="header">
-		<!--With help of: http://www.w3schools.com/bootstrap/bootstrap_carousel.asp-->
-		<div id="header-carousel" class="carousel slide" data-ride="carousel">
-			<ol class="carousel-indicators">
-				<li data-target="#header-carousel" data-slide-to="0" class="active"></li>
-				<li data-target="#header-carousel" data-slide-to="1"></li>
-				<li data-target="#header-carousel" data-slide-to="2"></li>
-			 </ol>
+    <head>
+        <meta charset="utf-8">
+        <link rel="stylesheet" type="text/css" href="{% static 'appuser/style.css' %}" />
+        <link rel="stylesheet" href="//maxcdn.bootstrapcdn.com/bootstrap/3.3.6/css/bootstrap.min.css">
+        <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.12.0/jquery.min.js"></script>
+        <script src="//maxcdn.bootstrapcdn.com/bootstrap/3.3.6/js/bootstrap.min.js"></script>
+    </head>
 
-			 <div class="carousel-inner" role="listbox">
-			 	<div class="item active">
-			 		<img src="https://www.planwallpaper.com/static/images/cool-background.jpg">
-			 	</div>
-			 	<div class="item">
-			 		<img src="https://www.planwallpaper.com/static/images/518079-background-hd.jpg">
-			 	</div>
-			 	<div class="item">
-			 		<img src="http://i70.photobucket.com/albums/i119/tiff_pics/0728060440.jpg">
-			 	</div>
-			 </div>
+    <body>
+        <div class="header">
 
-		 	<a class="left carousel-control" href="#header-carousel" role="button" data-slide="prev">
-				<span class="glyphicon glyphicon-chevron-left" aria-hidden="true"></span>
-				<span class="sr-only">Previous</span>
-			</a>
-			<a class="right carousel-control" href="#header-carousel" data-slide="next">
-				<span class="glyphicon glyphicon-chevron-right" aria-hidden="true"></span>
-				<span class="sr-only">Next</span>
-			</a>
-		</div>
-	</div>
-
-	<div class="nav">
-		<h1 class="left">Popular Groups</h1>
-		<a class="right" href='{% url 'allteams' %}'>
-			All <span class="glyphicon glyphicon-menu-right" aria-hidden="true"></span>
-		</a>
-	</div>
-
-	<div class="groups container">
-		{% for team in teams_list %}
-			<div class="text-center">
-				<a href="{% url 'allteams' %}">
-					<div class="btn btn-default btn-circle">
-						<i class="fa fa-user">{{team.first_letter}}</i>
-					</div>
-					<p>{{team.team_name}}</p>
-				</a>
-			</div>
-		{% endfor %}
-	</div>
-
-	<div class="divider"></div>
-
-	<div class="nav">
-		<h1 class="left">Recent Tasks</h1>
-		<a class="right" href='#'>
-			All <span class="glyphicon glyphicon-menu-right" aria-hidden="true"></span>
-		</a>
-	</div>
-
-	<div class="tasks">
-		{% for task in tasks_list %}
-			<div class="divider"></div>
-			<div class="task-preview">
-				<a href="#">
-					<h2>{{task.task_name}}</h2>
-					<p>{{task.task_description}}</p>
-					<div class="task-footer">
-						<p>Leader: {{task.task_leader}}</p>
-						<p>{{task.creation_date}}</p>
-					</div>
-				</a>
-			</div>
-		{% endfor %}
-	</div>
+            <div class="panel panel-default">
+                <div class="panel-heading">
+                    <div class="nav">
+                     <div class=" pull-left">
+                    <h1><a data-toggle="collapse" href="#collapse1">All Teams</a></h1>
+                    </div>
+                    <div class="pull-right">
+                    <form class="form-inline ">
+                        <div class="form-group pull-right">
+                            <label for="exampleInputName2">Search</label>
+                            <input id="searchterm" type="text" class="form-control"placeholder="Input Search">
+                            <button id="search" type="submit" class="btn btn-primary">Search</button>
+                        </div>
+                    </form>
+                    </div>
+                </div>
+                <div id="collapse1" class="panel-body panel-collapse collapse">
+                    <div class="embed-responsive embed-responsive-16by9">
+                        <iframe class="embed-responsive-item" src="https://www.youtube.com/embed/tOBXFAUE3m0" frameborder="0" allowfullscreen></iframe>
+                    </div>
+                </div>
+            </div>
 
 
+
+
+        </div>
+<div class="container">
+    <ul class="list-group">
+    {% for team in teamsjson.0 %}
+    <li class="list-group-item">
+    <div class="media">
+         <div class="media-left">
+        <div class="btn btn-default btn-lg btn-circle">
+            <i class="fa fa-user">{{ forloop.counter }}</i>
+        </div>
+        </div>
+            
+             <div class="media-body">
+
+            <h4 class="media-heading"><b>{{team.fields.team_name}}</b></h4>
+            
+            <p> {{team.fields.team_description}}</p>
+       </div>
+       </div>
+    
+    </li>
+    {% endfor %}
+
+    </ul>
+</div>
 	<div class="footer">
 		<div class="footer-contents text-center">
 			<a href="#">
@@ -100,4 +75,5 @@
 		</div>
 	</div>
 </body>
+
 </html>
