hopefully this fixes footer issue

--- a/sitedir/appuser/templates/appuser/index.html
+++ b/sitedir/appuser/templates/appuser/index.html
@@ -84,13 +84,13 @@
 	</div>
 
 
-	<div class="footer h-list">
-		<div class="footer-contents text-center h-list-item">
-			<a href="#">
+	<div class="footer ">
+		<div class="footer-contents container h-list">
+			<a class="h-list-item" href="#">
 				<i class="glyphicon glyphicon-flag fa fa-user"></i>
 				<p>Execute</p>
 			</a>
-			<a href="#">
+			<a class="h-list-item" href="#">
 				<i class="glyphicon glyphicon-user fa fa-user"></i>
 				<p>Profile</p>
 			</a>
