--- a/sitedir/appuser/templates/appuser/index.html
+++ b/sitedir/appuser/templates/appuser/index.html
@@ -68,15 +68,15 @@
 	</div>
 
 	<div class="tasks">
-		{% for task in tasks_list %}
+		{% for task in tasks_list.1 %}
 			<div class="divider"></div>
 			<div class="task-preview">
 				<a href="#">
-					<h2>{{task.task_name}}</h2>
-					<p>{{task.task_description}}</p>
+					<h2>{{task.fields.task_name}}</h2>
+					<p>{{task.fields.task_description}}</p>
 					<div class="task-footer">
-						<p>Leader: {{task.task_leader}}</p>
-						<p>{{task.creation_date}}</p>
+						<p>Leader: {{task.fields.task_leader}}</p>
+						<p>{{task.fields.creation_date}}</p>
 					</div>
 				</a>
 			</div>
