--- a/sitedir/appuser/templates/appuser/team.html
+++ b/sitedir/appuser/templates/appuser/team.html
@@ -18,7 +18,7 @@
             <div class="panel-body" style="padding: 0px;">
             <div class="media" style="padding:2%; background-color:#594f59;border:none;">
                 <div class="media-left">
-                    <button type="button" class="btn btn-default btn-circle"><i class="glyphicon glyphicon-ok"></i></button>
+                    <button type="button" class="btn btn-default btn-circle">{{teamjson.0.team_name.0}}</button>
                 </div>
 
                 <div class="media-body">
