Updated getTaskbyID to remove json functions

--- a/sitedir/appuser/templates/appuser/task-detail.html
+++ b/sitedir/appuser/templates/appuser/task-detail.html
@@ -34,7 +34,7 @@
     </div>
 </header>
 <div class="director">
-    负责人：{{ taskdetail.team_leader }}
+    负责人：{{ taskdetail.task_leader }}
     <span class="glyphicon glyphicon-chevron-right director-icon" aria-hidden="true"></span>
 </div>
 <div class="title-box">
