Add link to all-task list

--- a/sitedir/appuser/templates/appuser/index.html
+++ b/sitedir/appuser/templates/appuser/index.html
@@ -62,7 +62,7 @@
 
 	<div class="nav">
 		<h1 class="left">Recent Tasks</h1>
-		<a class="right" href='#'>
+		<a class="right" href='{% url 'alltasks' %}'>
 			All <span class="glyphicon glyphicon-menu-right" aria-hidden="true"></span>
 		</a>
 	</div>
