--- a/sitedir/appuser/templates/appuser/task-list.html
+++ b/sitedir/appuser/templates/appuser/task-list.html
@@ -33,15 +33,17 @@
             <li><a href="#">文案组</a></li>
         </ul>
 </div>
-{% for task in tasksjson %}
+{% for task in tasksjson.0 %}
 <div class="task-list-box">
     <div class="task-list-title-box">
         <span class="badge task-list-group">{{ task.team_name }}</span>
-        <span class="task-list-title">{{ task.task_name }}</span>
+        <a href="task/{{ task.task_id }}" class="alltask-link"><span class="task-list-title">{{ task.task_name }}</span></a>
     </div>
+    <a href="task/{{ task.task_id }}" class="alltask-link">
     <div class="task-list-content">
         {{ task.task_description }}
     </div>
+    </a>
     <div class="task-list-footer">
         <span class="task-list-director"><span class="glyphicon glyphicon-user mar-3" aria-hidden="true"></span>负责人：{{ task.task_leader }}</span>
         <span class="task-list-date"><span class="glyphicon glyphicon-calendar mar-3" aria-hidden="true">{{ task.creation_date }}</span>
