--- a/sitedir/appuser/templates/appuser/task-detail.html
+++ b/sitedir/appuser/templates/appuser/task-detail.html
@@ -28,7 +28,7 @@
     任务详情
 </div>
 <header>
-<p class="task-title"><span class="glyphicon glyphicon-th-list title-icon" aria-hidden="true"></span>任务名称</p>
+<p class="task-title"><span class="glyphicon glyphicon-th-list title-icon" aria-hidden="true"></span>{{ taskdetail.task_name }}</p>
     <div class="sub-title">
         <p class="group">{{ taskdetail.team_name }}<span class="pub-time">发布于{{ taskdetail.creation_date }}</span></p>
     </div>
