Update team-name filed

--- a/sitedir/appuser/templates/appuser/profile.html
+++ b/sitedir/appuser/templates/appuser/profile.html
@@ -46,7 +46,7 @@
         <div class="row">
             <div class="col-xs-6 execution-left">
                 <p class="execution-big">Group</p>
-                <p class="execution-small">0 group</p>
+                <p class="execution-small">{{ personalprofile.team_name }}</p>
             </div>
             <div class="col-xs-6 execution-right">
                 <p class="execution-big">Task</p>
