--- a/sitedir/appuser/templates/appuser/team.html
+++ b/sitedir/appuser/templates/appuser/team.html
@@ -9,7 +9,7 @@
     <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/js/bootstrap.min.js"></script>
 </head>
 
-<body>
+<body >
 
 
     <div class="header">
@@ -18,7 +18,10 @@
             <div class="panel-body" style="padding: 0px;">
             <div class="media" style="padding:2%; background-color:#594f59;border:none;">
                 <div class="media-left">
-                    <button type="button" class="btn btn-default btn-circle">{{teamjson.0.team_name.0}}</button>
+                    <div style=" height: 50px;
+    width: 50px;
+    border-radius: 50px;
+    -webkit-border-radius: 50px;text-align:center;vertical-align:middle;font-size:100%;background-color:#738ffe;line-height: 50px;color:white;font-weight:bolder;">{{teamjson.0.team_name.0}}</div>
                 </div>
 
                 <div class="media-body">
