--- a/sitedir/appuser/templates/appuser/index.html
+++ b/sitedir/appuser/templates/appuser/index.html
@@ -1,10 +1,11 @@
 {% load staticfiles %}
-
+<head>
+<meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
 <link rel="stylesheet" type="text/css" href="{% static 'appuser/style.css' %}"/>
 <link rel="stylesheet" href="//maxcdn.bootstrapcdn.com/bootstrap/3.3.6/css/bootstrap.min.css">
 <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.12.0/jquery.min.js"></script>
 <script src="//maxcdn.bootstrapcdn.com/bootstrap/3.3.6/js/bootstrap.min.js"></script>
-
+</head>
 <body>
 	<div class="header">
 		<!--With help of: http://www.w3schools.com/bootstrap/bootstrap_carousel.asp-->
