--- a/sitedir/appuser/templates/appuser/profile-setting.html
+++ b/sitedir/appuser/templates/appuser/profile-setting.html
@@ -4,6 +4,7 @@
 
 <head>
     <meta charset="utf-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
     <link rel="stylesheet" type="text/css" href="{% static 'appuser/style.css' %}" />
     <link rel="stylesheet" type="text/css" href="{% static 'appuser/countries.js' %}" />
     <link rel="stylesheet" href="//maxcdn.bootstrapcdn.com/bootstrap/3.3.6/css/bootstrap.min.css">
