--- a/sitedir/appuser/templates/appuser/allteams.html
+++ b/sitedir/appuser/templates/appuser/allteams.html
@@ -27,9 +27,10 @@
             <a href='team/{{ team.team_id}}' class="list-group-item"style="margin:0px;padding:0px;border:none;">
                 <div class="media" style="padding:2%;border: none;!important">
                     <div class="media-left">
-                        <div class="btn btn-default btn-circle">
-                            <i class="fa fa-user">{{team.team_name.0}}</i>
-                            </div>
+                      <div style=" height: 50px;
+    width: 50px;
+    border-radius: 50px;
+    -webkit-border-radius: 50px;text-align:center;vertical-align:middle;font-size:100%;background-color:#738ffe;line-height: 50px;color:white;font-weight:bolder;">{{team.team_name.0}}</div>
                     </div>
 
                     <div class="media-body">
