--- a/sitedir/appuser/templates/appuser/profile.html
+++ b/sitedir/appuser/templates/appuser/profile.html
@@ -68,27 +68,30 @@
     <span class="dotted"></span>
     <div class="title">Education history</div>
 </div>
+{% for edu in personaleducation.0 %}
 <div class="box">
     <div class="list-box">
         <div class="list">
             <span>Graduate School:</span>
-            <span class="word-right">{{ personalprofile.college_name }}</span>
+            <span class="word-right">{{ edu.college_name }}</span>
         </div>
         <div class="list">
             <span>Major:</span>
-            <span class="word-right">{{ personalprofile.major }}</span>
+            <span class="word-right">{{ edu.major }}</span>
         </div>
     </div>
 </div>
+{% endfor %}
 <div class="title-box">
     <span class="dotted"></span>
     <div class="title">Work Experience</div>
 </div>
+{% for employment in personalemployment.0 %}
 <div class="box">
     <div class="list-box">
         <div class="list">
             <span>Company:</span>
-            <span class="word-right">{{ personalprofile.company }}</span>
+            <span class="word-right">{{ employment.employer_name }}</span>
         </div>
         <div class="list">
             <span>Position:</span>
@@ -96,6 +99,7 @@
         </div>
     </div>
 </div>
+{% endfor %}
 <nav class="navbar navbar-default navbar-fixed-bottom">
     <div class="zhixingli">
         <a href="{% url 'index' %}">
