--- a/sitedir/appuser/templates/appuser/team.html
+++ b/sitedir/appuser/templates/appuser/team.html
@@ -37,7 +37,9 @@
 </div>
     <div class="panel panel-default"style="border:none;margin:0px;">
         <div class="panel-body">
+            <a href="/appuser/profile/{{ teamjson.0.leadid}}/">
        Team Leader: {{teamjson.0.team_leader}}
+       </a>
         </div>
     </div>
     <div class="panel panel-default"style="margin:0px;border-radius: 0 !important;border:none;">
@@ -53,8 +55,11 @@
             {%for member in teamjson.0.team_members%}
         
         <li>
-            {{member}}
+            <a href="/appuser/profile/{{ member.1}}/">
+            {{member.0}}
+            </a>
         </li>
+        
          {% endfor %}
          </ul>
         </div>
@@ -97,7 +102,9 @@
     </div>
 
 
-
+    <footer class="footer">
+        <button style="width: 100%; height:100%;font-size:1.5em;font-weight: bold;" type="button" class="btn btn-info">Join This Team</button>
+    </footer>
 
 </body>
 
