--- a/sitedir/appuser/templates/appuser/profile.html
+++ b/sitedir/appuser/templates/appuser/profile.html
@@ -34,7 +34,7 @@
         {{ personalprofile.city }}
     </div>
     <div class="profile-setting">
-        <a href="{% url 'profile-settings' %}">setting</a>
+        <a href="/appuser/profile-settings">setting</a>
     </div>
 </header>
 <div class="title-box">
