--- a/sitedir/appuser/templates/appuser/allteams.html
+++ b/sitedir/appuser/templates/appuser/allteams.html
@@ -1,4 +1,5 @@
 {% load staticfiles %}
+{% load i18n %}
 <!DOCTYPE html>
 
 <head>
@@ -18,7 +19,7 @@
     font-size: 18px;
     text-align: center;
     padding: 5px 0;">
-        <span style="color:white;font-size:1em;"><h1>All Teams</h1></span>
+        <span style="color:white;font-size:1em;"><h1>{% trans "All Teams" %}</h1></span>
     </div>
     <ul class="list-group"style=" padding-left:0px;
     margin-left: 0px;">
@@ -50,11 +51,11 @@
         <div class="footer-contents container h-list">
             <a class="h-list-item" href="#">
                 <i class="glyphicon glyphicon-flag fa fa-user"></i>
-                <p>Execute</p>
+                <p>{% trans "Execute" %}</p>
             </a>
             <a class="h-list-item" href="#">
                 <i class="glyphicon glyphicon-user fa fa-user"></i>
-                <p>Profile</p>
+                <p>{% trans "Profile" %}</p>
             </a>
         </div>
     </div>
