--- a/sitedir/appuser/templates/appuser/index.html
+++ b/sitedir/appuser/templates/appuser/index.html
@@ -90,11 +90,11 @@
 		<div class="footer-contents container h-list">
 			<a class="h-list-item" href="#">
 				<i class="glyphicon glyphicon-flag fa fa-user"></i>
-				<p>Execute</p>
+				<p>{% trans "Execute" %}</p>
 			</a>
 			<a class="h-list-item" href="/appuser/profile">
 				<i class="glyphicon glyphicon-user fa fa-user"></i>
-				<p>Profile</p>
+				<p>{% trans "Profile" %}</p>
 			</a>
 		</div>
 	</div>
